fixed radio button alignment, masthead

--- a/css/main.css
+++ b/css/main.css
@@ -204,6 +204,9 @@ a {
   padding: 0px 30px;
   background-color: white;
   height: 50px;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .nav-second h6 {
@@ -215,6 +218,7 @@ a {
   background-repeat: repeat-x;
   background-position: center;
   height: 405px;
+  position: relative;
 }
 
 .home-masthead {
@@ -222,10 +226,11 @@ a {
   background-repeat: repeat-x;
   background-position: center;
   height: 405px;
+  position: relative;
 }
 
 .home-content {
-  padding: 20px 100px;
+  padding: 20px 20vw;
 }
 
 .products-content {
@@ -276,10 +281,11 @@ a {
   padding-bottom: 35px;
 }
 
-.riley {
+.scents > div {
   display: flex;
   flex-direction: row;
   flex-wrap: none;
+  align-items: center;
 }
 
 .scents h10 {
